# customer-support-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/agents/activities/: tools.py
app/agents/base/: agent.py  prompts.py  tools.py
app/agents/cars/: tools.py
app/agents/flights/: tools.py
app/agents/hotels/: tools.py
app/agents/supervisor/: graph.py  state.py
app/api/routes/: chat.py  http_chat.py  setup_routers.py  ws_chat.py
app/bootstrap/: bootstrap.py
app/config/: settings.py  setup_middlewares.py  setup_routers.py  setup_static.py
app/services/database/: async_postgres_client.py  database_client.py  db_sqlite.py
app/services/vectorstore/: vector_store.py
app/templates/: index.html
app/utils/: logger.py  logging.py  nodes_helpers.py
tests/integration/test_api/: test_workflow_agent.py
