[project]
name = "customer-support-agent"
version = "0.1.0"
description = ""
authors = [{ name = "Carlos L.", email = "<krlosaren@gmail.com>" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-anthropic (>=0.3.15,<0.4.0)",
    "tavily-python (>=0.7.5,<0.8.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
