[project]
name = "customer-support-agent"
version = "0.1.0"
description = ""
authors = [{ name = "Carlos L.", email = "<krlosaren@gmail.com>" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-anthropic (>=0.3.15,<0.4.0)",
    "tavily-python (>=0.7.5,<0.8.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "langchain-openai (>=0.3.21,<0.4.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
black = "^25.1.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
